src/compiler/parser.rs
use crate::compiler::ast::*;
use crate::compiler::span::Span;
use crate::compiler::token::{InterpPart, Token, TokenKind};
use std::fmt;

// ═══════════════════════════════════════════════════════════════
//  Error type
// ═══════════════════════════════════════════════════════════════

#[derive(Debug, Clone)]
pub struct ParseError {
    pub message: String,
    pub span: Span,
}

impl fmt::Display for ParseError {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        write!(f, "parse error at {}: {}", self.span, self.message)
    }
}

impl std::error::Error for ParseError {}

// ═══════════════════════════════════════════════════════════════
//  Parser
// ═══════════════════════════════════════════════════════════════

pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
}

impl Parser {
    pub fn new(tokens: Vec<Token>) -> Self {
        Self { tokens, pos: 0 }
    }

    pub fn parse_program(&mut self) -> Result<Program, ParseError> {
        let start_span = self.current_span();

        // Optional module declaration
        let module_name = if self.check(&TokenKind::Module) {
            self.advance();
            let name = self.expect_ident()?;
            self.expect(&TokenKind::Semicolon)?;
            Some(name)
        } else {
            None
        };

        // Use declarations
        let mut uses = Vec::new();
        while self.check(&TokenKind::Use) {
            uses.push(self.parse_use_decl()?);
        }

        // Top-level declarations
        let mut declarations = Vec::new();
        while !self.check(&TokenKind::EOF) {
            declarations.push(self.parse_declaration()?);
        }

        let end_span = self.current_span();
        Ok(Program {
            module_name,
            uses,
            declarations,
            span: start_span.merge(end_span),
        })
    }

    // ── Use declarations ─────────────────────────────────────

    fn parse_use_decl(&mut self) -> Result<UseDecl, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Use)?;

        let mut path = vec![self.expect_ident()?];
        while self.check(&TokenKind::Dot) {
            self.advance();
            path.push(self.expect_ident()?);
        }
        self.expect(&TokenKind::Semicolon)?;

        Ok(UseDecl {
            path,
            span: start.merge(self.prev_span()),
        })
    }

    // ── Top-level declarations ───────────────────────────────

    fn parse_declaration(&mut self) -> Result<Declaration, ParseError> {
        // impl blocks and trait decls: no pub/pure prefix needed for impl
        if self.check(&TokenKind::Impl) {
            return Ok(Declaration::Impl(self.parse_impl_decl()?));
        }

        let is_pub = if self.check(&TokenKind::Pub) {
            self.advance();
            true
        } else {
            false
        };

        let is_pure = if self.check(&TokenKind::Pure) {
            self.advance();
            true
        } else {
            false
        };

        match self.peek_kind() {
            TokenKind::Fn => Ok(Declaration::Function(self.parse_fn_decl(is_pub, is_pure)?)),
            TokenKind::Struct => {
                if is_pure {
                    return Err(self.error("'pure' modifier is not valid on struct declarations"));
                }
                Ok(Declaration::Struct(self.parse_struct_decl(is_pub)?))
            }
            TokenKind::Enum => {
                if is_pure {
                    return Err(self.error("'pure' modifier is not valid on enum declarations"));
                }
                Ok(Declaration::Enum(self.parse_enum_decl(is_pub)?))
            }
            TokenKind::Const => {
                if is_pure {
                    return Err(self.error("'pure' modifier is not valid on const declarations"));
                }
                Ok(Declaration::Const(self.parse_const_decl(is_pub)?))
            }
            TokenKind::Trait => {
                if is_pure {
                    return Err(self.error("'pure' modifier is not valid on trait declarations"));
                }
                Ok(Declaration::Trait(self.parse_trait_decl(is_pub)?))
            }
            _ => Err(self.error("expected declaration (fn, struct, enum, const, or trait)")),
        }
    }

    fn parse_impl_decl(&mut self) -> Result<ImplDecl, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Impl)?;
        let type_params = self.parse_type_params()?;
        let first_name = self.expect_ident()?;

        // Check for `impl Trait for Type { ... }`
        let (target_type, trait_name) = if self.check(&TokenKind::For) {
            self.advance();
            let target = self.expect_ident()?;
            (target, Some(first_name))
        } else {
            (first_name, None)
        };

        self.expect(&TokenKind::LBrace)?;
        let mut methods = Vec::new();
        while !self.check(&TokenKind::RBrace) {
            let is_pub = if self.check(&TokenKind::Pub) {
                self.advance();
                true
            } else {
                false
            };
            let is_pure = if self.check(&TokenKind::Pure) {
                self.advance();
                true
            } else {
                false
            };
            methods.push(self.parse_fn_decl(is_pub, is_pure)?);
        }
        self.expect(&TokenKind::RBrace)?;

        Ok(ImplDecl {
            target_type,
            trait_name,
            type_params,
            methods,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_trait_decl(&mut self, is_pub: bool) -> Result<TraitDecl, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Trait)?;
        let name = self.expect_ident()?;
        self.expect(&TokenKind::LBrace)?;

        let mut methods = Vec::new();
        while !self.check(&TokenKind::RBrace) {
            let mstart = self.current_span();
            self.expect(&TokenKind::Fn)?;
            let mname = self.expect_ident()?;

            self.expect(&TokenKind::LParen)?;
            let params = if self.check(&TokenKind::RParen) {
                self.advance();
                Vec::new()
            } else {
                let params = self.parse_param_list()?;
                self.expect(&TokenKind::RParen)?;
                params
            };

            self.expect(&TokenKind::Arrow)?;
            let return_type = self.parse_type()?;

            // Semicolon = required method, block = default implementation
            let default_body = if self.check(&TokenKind::Semicolon) {
                self.advance();
                None
            } else {
                Some(self.parse_block()?)
            };

            methods.push(TraitMethod {
                name: mname,
                params,
                return_type,
                default_body,
                span: mstart.merge(self.prev_span()),
            });
        }
        self.expect(&TokenKind::RBrace)?;

        Ok(TraitDecl {
            name,
            is_pub,
            methods,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_type_params(&mut self) -> Result<Vec<TypeParam>, ParseError> {
        let mut type_params = Vec::new();
        if !self.check(&TokenKind::Lt) {
            return Ok(type_params);
        }
        self.advance(); // consume <

        loop {
            let start = self.current_span();
            let name = self.expect_ident()?;
            let mut bounds = Vec::new();
            if self.check(&TokenKind::Colon) {
                self.advance();
                bounds.push(self.expect_ident()?);
                while self.check(&TokenKind::Plus) {
                    self.advance();
                    bounds.push(self.expect_ident()?);
                }
            }
            type_params.push(TypeParam {
                name,
                bounds,
                span: start.merge(self.prev_span()),
            });
            if self.check(&TokenKind::Comma) {
                self.advance();
            } else {
                break;
            }
        }
        self.expect(&TokenKind::Gt)?;
        Ok(type_params)
    }

    fn parse_fn_decl(&mut self, is_pub: bool, is_pure: bool) -> Result<FnDecl, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Fn)?;
        let name = self.expect_ident()?;
        let type_params = self.parse_type_params()?;

        // Parameters
        self.expect(&TokenKind::LParen)?;
        let params = if self.check(&TokenKind::RParen) {
            self.advance();
            Vec::new()
        } else {
            let params = self.parse_param_list()?;
            self.expect(&TokenKind::RParen)?;
            params
        };

        // Return type
        self.expect(&TokenKind::Arrow)?;
        let return_type = self.parse_type()?;

        // Contract clauses
        let mut contracts = Vec::new();
        loop {
            if self.check(&TokenKind::Requires) {
                self.advance();
                let expr = self.parse_expr()?;
                contracts.push(Contract::Requires(expr));
            } else if self.check(&TokenKind::Ensures) {
                self.advance();
                let expr = self.parse_expr()?;
                contracts.push(Contract::Ensures(expr));
            } else if self.check(&TokenKind::Effects) {
                self.advance();
                // Handle empty effects list: `effects {` → empty vec
                let mut effects = Vec::new();
                if !self.check(&TokenKind::LBrace) {
                    effects.push(self.expect_ident()?);
                    while self.check(&TokenKind::Comma) {
                        self.advance();
                        // Stop if we hit the opening brace
                        if self.check(&TokenKind::LBrace) {
                            break;
                        }
                        effects.push(self.expect_ident()?);
                    }
                }
                contracts.push(Contract::Effects(effects));
            } else {
                break;
            }
        }

        // Body
        let body = self.parse_block()?;

        Ok(FnDecl {
            name,
            is_pure,
            is_pub,
            type_params,
            params,
            return_type,
            contracts,
            body,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_param_list(&mut self) -> Result<Vec<Param>, ParseError> {
        let mut params = Vec::new();
        params.push(self.parse_param()?);
        while self.check(&TokenKind::Comma) {
            self.advance();
            if self.check(&TokenKind::RParen) {
                break; // trailing comma
            }
            params.push(self.parse_param()?);
        }
        Ok(params)
    }

    fn parse_param(&mut self) -> Result<Param, ParseError> {
        let start = self.current_span();
        let name = self.expect_ident()?;
        self.expect(&TokenKind::Colon)?;
        let ty = self.parse_type()?;
        Ok(Param {
            name,
            ty,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_struct_decl(&mut self, is_pub: bool) -> Result<StructDecl, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Struct)?;
        let name = self.expect_ident()?;
        let type_params = self.parse_type_params()?;
        self.expect(&TokenKind::LBrace)?;

        let mut fields = Vec::new();
        while !self.check(&TokenKind::RBrace) {
            let fstart = self.current_span();
            let fname = self.expect_ident()?;
            self.expect(&TokenKind::Colon)?;
            let fty = self.parse_type()?;
            fields.push(Field {
                name: fname,
                ty: fty,
                span: fstart.merge(self.prev_span()),
            });
            if !self.check(&TokenKind::RBrace) {
                self.expect(&TokenKind::Comma)?;
            }
        }
        self.expect(&TokenKind::RBrace)?;

        Ok(StructDecl {
            name,
            is_pub,
            type_params,
            fields,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_enum_decl(&mut self, is_pub: bool) -> Result<EnumDecl, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Enum)?;
        let name = self.expect_ident()?;
        let type_params = self.parse_type_params()?;
        self.expect(&TokenKind::LBrace)?;

        let mut variants = Vec::new();
        while !self.check(&TokenKind::RBrace) {
            let vstart = self.current_span();
            let vname = self.expect_ident()?;
            let mut vfields = Vec::new();
            if self.check(&TokenKind::LParen) {
                self.advance();
                if !self.check(&TokenKind::RParen) {
                    vfields.push(self.parse_type()?);
                    while self.check(&TokenKind::Comma) {
                        self.advance();
                        if self.check(&TokenKind::RParen) {
                            break;
                        }
                        vfields.push(self.parse_type()?);
                    }
                }
                self.expect(&TokenKind::RParen)?;
            }
            variants.push(Variant {
                name: vname,
                fields: vfields,
                span: vstart.merge(self.prev_span()),
            });
            if !self.check(&TokenKind::RBrace) {
                self.expect(&TokenKind::Comma)?;
            }
        }
        self.expect(&TokenKind::RBrace)?;

        Ok(EnumDecl {
            name,
            is_pub,
            type_params,
            variants,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_const_decl(&mut self, is_pub: bool) -> Result<ConstDecl, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Const)?;
        let name = self.expect_ident()?;
        self.expect(&TokenKind::Colon)?;
        let ty = self.parse_type()?;
        self.expect(&TokenKind::Eq)?;
        let value = self.parse_expr()?;
        self.expect(&TokenKind::Semicolon)?;

        Ok(ConstDecl {
            name,
            is_pub,
            ty,
            value,
            span: start.merge(self.prev_span()),
        })
    }

    // ── Types ────────────────────────────────────────────────

    fn parse_type(&mut self) -> Result<Type, ParseError> {
        match self.peek_kind() {
            TokenKind::IntType => {
                self.advance();
                Ok(Type::Int)
            }
            TokenKind::FloatType => {
                self.advance();
                Ok(Type::Float)
            }
            TokenKind::BoolType => {
                self.advance();
                Ok(Type::Bool)
            }
            TokenKind::StringType => {
                self.advance();
                Ok(Type::Str)
            }
            TokenKind::CharType => {
                self.advance();
                Ok(Type::Char)
            }
            TokenKind::UnitType => {
                self.advance();
                Ok(Type::Unit)
            }
            TokenKind::SelfType => {
                self.advance();
                Ok(Type::SelfType)
            }
            TokenKind::Fn => {
                // fn(T, U) -> V
                self.advance();
                self.expect(&TokenKind::LParen)?;
                let mut param_types = Vec::new();
                if !self.check(&TokenKind::RParen) {
                    param_types.push(self.parse_type()?);
                    while self.check(&TokenKind::Comma) {
                        self.advance();
                        if self.check(&TokenKind::RParen) {
                            break;
                        }
                        param_types.push(self.parse_type()?);
                    }
                }
                self.expect(&TokenKind::RParen)?;
                self.expect(&TokenKind::Arrow)?;
                let ret_type = self.parse_type()?;
                Ok(Type::Fn(param_types, Box::new(ret_type)))
            }
            TokenKind::Ident(_) => {
                let name = self.expect_ident()?;
                // Built-in Map type: bare "Map" defaults to Map<string, int>
                if name == "Map" && !self.check(&TokenKind::Lt) {
                    return Ok(Type::Generic("Map".to_string(), vec![Type::Str, Type::Int]));
                }
                // Check for type args: Name<T, U>
                if self.check(&TokenKind::Lt) {
                    self.advance();
                    let mut args = vec![self.parse_type()?];
                    while self.check(&TokenKind::Comma) {
                        self.advance();
                        args.push(self.parse_type()?);
                    }
                    self.expect(&TokenKind::Gt)?;
                    // Special-case Task<T> and Chan<T>
                    if name == "Task" && args.len() == 1 {
                        Ok(Type::Task(Box::new(args.into_iter().next().unwrap())))
                    } else if name == "Chan" && args.len() == 1 {
                        Ok(Type::Chan(Box::new(args.into_iter().next().unwrap())))
                    } else {
                        Ok(Type::Generic(name, args))
                    }
                } else {
                    Ok(Type::Named(name))
                }
            }
            TokenKind::LBracket => {
                self.advance();
                let inner = self.parse_type()?;
                self.expect(&TokenKind::RBracket)?;
                Ok(Type::Array(Box::new(inner)))
            }
            TokenKind::Ampersand => {
                self.advance();
                if self.check(&TokenKind::Mut) {
                    self.advance();
                    let inner = self.parse_type()?;
                    Ok(Type::MutRef(Box::new(inner)))
                } else {
                    let inner = self.parse_type()?;
                    Ok(Type::Ref(Box::new(inner)))
                }
            }
            TokenKind::Own => {
                self.advance();
                let inner = self.parse_type()?;
                Ok(Type::Own(Box::new(inner)))
            }
            TokenKind::LParen => {
                // Tuple type: (T1, T2, ...)
                self.advance();
                let first = self.parse_type()?;
                if self.check(&TokenKind::Comma) {
                    // It's a tuple type
                    self.advance();
                    let mut types = vec![first];
                    if !self.check(&TokenKind::RParen) {
                        types.push(self.parse_type()?);
                        while self.check(&TokenKind::Comma) {
                            self.advance();
                            if self.check(&TokenKind::RParen) {
                                break;
                            }
                            types.push(self.parse_type()?);
                        }
                    }
                    self.expect(&TokenKind::RParen)?;
                    Ok(Type::Tuple(types))
                } else {
                    // Single type in parens, not a tuple — just return the type
                    self.expect(&TokenKind::RParen)?;
                    Ok(first)
                }
            }
            _ => Err(self.error("expected type")),
        }
    }

    // ── Blocks and statements ────────────────────────────────

    fn parse_block(&mut self) -> Result<Block, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::LBrace)?;

        let mut stmts = Vec::new();
        while !self.check(&TokenKind::RBrace) {
            stmts.push(self.parse_stmt()?);
        }
        self.expect(&TokenKind::RBrace)?;

        Ok(Block {
            stmts,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_stmt(&mut self) -> Result<Stmt, ParseError> {
        match self.peek_kind() {
            TokenKind::Let => self.parse_let_stmt(),
            TokenKind::Return => self.parse_return_stmt(),
            TokenKind::If => self.parse_if_stmt(),
            TokenKind::While => self.parse_while_stmt(),
            TokenKind::For => self.parse_for_stmt(),
            TokenKind::Match => self.parse_match_stmt(),
            TokenKind::Break => {
                let span = self.current_span();
                self.advance();
                self.expect(&TokenKind::Semicolon)?;
                Ok(Stmt::Break(BreakStmt { span }))
            }
            TokenKind::Continue => {
                let span = self.current_span();
                self.advance();
                self.expect(&TokenKind::Semicolon)?;
                Ok(Stmt::Continue(ContinueStmt { span }))
            }
            _ => self.parse_assign_or_expr_stmt(),
        }
    }

    fn parse_let_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Let)?;

        let is_mut = if self.check(&TokenKind::Mut) {
            self.advance();
            true
        } else {
            false
        };

        // Check for tuple destructuring: let (a, b): (int, string) = ...
        if self.check(&TokenKind::LParen) {
            self.advance();
            let mut names = vec![self.expect_ident()?];
            while self.check(&TokenKind::Comma) {
                self.advance();
                if self.check(&TokenKind::RParen) {
                    break;
                }
                names.push(self.expect_ident()?);
            }
            self.expect(&TokenKind::RParen)?;
            self.expect(&TokenKind::Colon)?;
            let ty = self.parse_type()?;
            self.expect(&TokenKind::Eq)?;
            let value = self.parse_expr()?;
            self.expect(&TokenKind::Semicolon)?;

            return Ok(Stmt::Let(LetStmt {
                name: String::new(), // unused for destructuring
                is_mut,
                ty,
                value,
                destructure: Some(names),
                span: start.merge(self.prev_span()),
            }));
        }

        let name = self.expect_ident()?;
        self.expect(&TokenKind::Colon)?;
        let ty = self.parse_type()?;
        self.expect(&TokenKind::Eq)?;
        let value = self.parse_expr()?;
        self.expect(&TokenKind::Semicolon)?;

        Ok(Stmt::Let(LetStmt {
            name,
            is_mut,
            ty,
            value,
            destructure: None,
            span: start.merge(self.prev_span()),
        }))
    }

    fn parse_return_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Return)?;

        let value = if self.check(&TokenKind::Semicolon) {
            // return; → return unit
            Expr {
                kind: ExprKind::Literal(Literal::Unit),
                span: self.current_span(),
            }
        } else {
            self.parse_expr()?
        };
        self.expect(&TokenKind::Semicolon)?;

        Ok(Stmt::Return(ReturnStmt {
            value,
            span: start.merge(self.prev_span()),
        }))
    }

    fn parse_if_stmt(&mut self) -> Result<Stmt, ParseError> {
        Ok(Stmt::If(self.parse_if_inner()?))
    }

    fn parse_if_inner(&mut self) -> Result<IfStmt, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::If)?;
        let condition = self.parse_expr()?;
        let then_block = self.parse_block()?;

        let else_branch = if self.check(&TokenKind::Else) {
            self.advance();
            if self.check(&TokenKind::If) {
                Some(Box::new(ElseBranch::ElseIf(self.parse_if_inner()?)))
            } else {
                Some(Box::new(ElseBranch::Else(self.parse_block()?)))
            }
        } else {
            None
        };

        Ok(IfStmt {
            condition,
            then_block,
            else_branch,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_while_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::While)?;
        let condition = self.parse_expr()?;
        let body = self.parse_block()?;

        Ok(Stmt::While(WhileStmt {
            condition,
            body,
            span: start.merge(self.prev_span()),
        }))
    }

    fn parse_for_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::For)?;
        let var_name = self.expect_ident()?;
        self.expect(&TokenKind::In)?;
        let iterable = self.parse_expr()?;
        let body = self.parse_block()?;

        Ok(Stmt::For(ForStmt {
            var_name,
            iterable,
            body,
            span: start.merge(self.prev_span()),
        }))
    }

    fn parse_match_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.current_span();
        self.expect(&TokenKind::Match)?;
        let subject = self.parse_expr()?;
        self.expect(&TokenKind::LBrace)?;

        let mut arms = Vec::new();
        while !self.check(&TokenKind::RBrace) {
            arms.push(self.parse_match_arm()?);
            // Optional trailing comma after the arm's block
            if self.check(&TokenKind::Comma) {
                self.advance();
            }
        }
        self.expect(&TokenKind::RBrace)?;

        Ok(Stmt::Match(MatchStmt {
            subject,
            arms,
            span: start.merge(self.prev_span()),
        }))
    }

    fn parse_match_arm(&mut self) -> Result<MatchArm, ParseError> {
        let start = self.current_span();
        let pattern = self.parse_pattern()?;
        self.expect(&TokenKind::FatArrow)?;
        let body = self.parse_block()?;

        Ok(MatchArm {
            pattern,
            body,
            span: start.merge(self.prev_span()),
        })
    }

    fn parse_pattern(&mut self) -> Result<Pattern, ParseError> {
        match self.peek_kind() {
            TokenKind::Underscore => {
                let span = self.current_span();
                self.advance();
                Ok(Pattern::Wildcard(span))
            }
            TokenKind::IntLit(n) => {
                let span = self.current_span();
                self.advance();
                Ok(Pattern::Literal(Literal::Int(n), span))
            }
            TokenKind::True => {
                let span = self.current_span();
                self.advance();
                Ok(Pattern::Literal(Literal::Bool(true), span))
            }
            TokenKind::False => {
                let span = self.current_span();
                self.advance();
                Ok(Pattern::Literal(Literal::Bool(false), span))
            }
            TokenKind::StringLit(ref s) => {
                let span = self.current_span();
                let s = s.clone();
                self.advance();
                Ok(Pattern::Literal(Literal::String(s), span))
            }
            TokenKind::CharLit(c) => {
                let span = self.current_span();
                self.advance();
                Ok(Pattern::Literal(Literal::Char(c), span))
            }
            TokenKind::Ident(_) => {
                let span = self.current_span();
                let name = self.expect_ident()?;
                // Check if this is a variant pattern: Name(pattern, ...)
                if self.check(&TokenKind::LParen) {
                    self.advance();
                    let mut sub_patterns = Vec::new();
                    if !self.check(&TokenKind::RParen) {
                        sub_patterns.push(self.parse_pattern()?);
                        while self.check(&TokenKind::Comma) {
                            self.advance();
                            if self.check(&TokenKind::RParen) {
                                break;
                            }
                            sub_patterns.push(self.parse_pattern()?);
                        }
                    }
                    self.expect(&TokenKind::RParen)?;
                    Ok(Pattern::Variant(name, sub_patterns, span))
                } else {
                    Ok(Pattern::Binding(name, span))
                }
            }
            _ => Err(self.error("expected pattern")),
        }
    }

    fn parse_assign_or_expr_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.current_span();
        let expr = self.parse_expr()?;

        if self.check(&TokenKind::Eq) {
            self.advance();
            let value = self.parse_expr()?;
            self.expect(&TokenKind::Semicolon)?;
            Ok(Stmt::Assign(AssignStmt {
                target: expr,
                value,
                span: start.merge(self.prev_span()),
            }))
        } else if let Some(op) = self.try_compound_assign() {
            self.advance();
            let rhs = self.parse_expr()?;
            self.expect(&TokenKind::Semicolon)?;
            let end = self.prev_span();
            let value = Expr {
                kind: ExprKind::Binary(Box::new(expr.clone()), op, Box::new(rhs)),
                span: start.merge(end),
            };
            Ok(Stmt::Assign(AssignStmt {
                target: expr,
                value,
                span: start.merge(end),
            }))
        } else {
            self.expect(&TokenKind::Semicolon)?;
            Ok(Stmt::Expr(ExprStmt {
                expr,
                span: start.merge(self.prev_span()),
            }))
        }
    }

    // ── Expressions (Pratt parser) ───────────────────────────

    pub fn parse_expr(&mut self) -> Result<Expr, ParseError> {
        self.parse_expr_bp(0)
    }

    fn parse_expr_bp(&mut self, min_bp: u8) -> Result<Expr, ParseError> {
        let mut lhs = self.parse_unary()?;

        loop {
            // Range operator `..` has lowest precedence (1, 2)
            if self.check(&TokenKind::DotDot) {
                if 1 < min_bp {
                    break;
                }
                self.advance();
                let rhs = self.parse_expr_bp(2)?;
                let span = lhs.span.merge(rhs.span);
                lhs = Expr {
                    kind: ExprKind::Range(Box::new(lhs), Box::new(rhs)),
                    span,
                };
                continue;
            }

            if let Some((op, width)) = self.try_binop() {
                let (l_bp, r_bp) = infix_binding_power(op);
                if l_bp < min_bp {
                    break;
                }

                // Consume operator token(s)
                for _ in 0..width {
                    self.advance();
                }
                let rhs = self.parse_expr_bp(r_bp)?;
                let span = lhs.span.merge(rhs.span);
                lhs = Expr {
                    kind: ExprKind::Binary(Box::new(lhs), op, Box::new(rhs)),
                    span,
                };
            } else {
                break;
            }
        }

        Ok(lhs)
    }

    fn parse_unary(&mut self) -> Result<Expr, ParseError> {
        let start = self.current_span();

        if self.check(&TokenKind::Minus) {
            self.advance();
            let operand = self.parse_unary()?;
            let span = start.merge(operand.span);
            return Ok(Expr {
                kind: ExprKind::Unary(UnaryOp::Neg, Box::new(operand)),
                span,
            });
        }

        if self.check(&TokenKind::Not) {
            self.advance();
            let operand = self.parse_unary()?;
            let span = start.merge(operand.span);
            return Ok(Expr {
                kind: ExprKind::Unary(UnaryOp::Not, Box::new(operand)),
                span,
            });
        }

        self.parse_postfix()
    }

    fn parse_postfix(&mut self) -> Result<Expr, ParseError> {
        let mut expr = self.parse_primary()?;
